# ShadowWatch

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
api/: main.py
baseline/: run_baseline.py
env/: graders.py  models.py  shadow_env.py  threat_generator.py
server/: app.py
